# Research_Generative_AI

./: .gitignore  README.md
AI/: agents.py  pipeline.py  pyproject.toml  requirements.txt  server.py  tools.py
frontend/client/: package-lock.json  package.json
frontend/client/src/: App.jsx
frontend/client/src/components/: ResearchForm.jsx  ResearchResult.jsx
frontend/client/src/hooks/: useResearch.jsx
